--- a/packages.bib
+++ b/packages.bib
@@ -32,6 +32,13 @@
   url = {https://CRAN.R-project.org/package=dplyr},
 }
 
+@Manual{R-emoGG,
+  title = {emoGG: Use Emoji in ggplot2},
+  author = {David L Miller},
+  year = {2020},
+  note = {R package version 0.0.2},
+}
+
 @Manual{R-forcats,
   title = {forcats: Tools for Working with Categorical Variables (Factors)},
   author = {Hadley Wickham},
@@ -46,6 +53,14 @@
   year = {2020},
   note = {R package version 3.3.2},
   url = {https://CRAN.R-project.org/package=ggplot2},
+}
+
+@Manual{R-janitor,
+  title = {janitor: Simple Tools for Examining and Cleaning Dirty Data},
+  author = {Sam Firke},
+  year = {2020},
+  note = {R package version 2.0.1},
+  url = {https://CRAN.R-project.org/package=janitor},
 }
 
 @Manual{R-knitr,
@@ -63,12 +78,28 @@
   note = {R package version 0.2},
 }
 
+@Manual{R-MBESS,
+  title = {MBESS: The MBESS R Package},
+  author = {Ken Kelley},
+  year = {2020},
+  note = {R package version 4.8.0},
+  url = {https://CRAN.R-project.org/package=MBESS},
+}
+
 @Manual{R-purrr,
   title = {purrr: Functional Programming Tools},
   author = {Lionel Henry and Hadley Wickham},
   year = {2020},
   note = {R package version 0.3.4},
   url = {https://CRAN.R-project.org/package=purrr},
+}
+
+@Manual{R-RColorBrewer,
+  title = {RColorBrewer: ColorBrewer Palettes},
+  author = {Erich Neuwirth},
+  year = {2014},
+  note = {R package version 1.1-2},
+  url = {https://CRAN.R-project.org/package=RColorBrewer},
 }
 
 @Manual{R-readr,
@@ -85,6 +116,14 @@
   year = {2020},
   note = {R package version 2.3},
   url = {https://CRAN.R-project.org/package=rmarkdown},
+}
+
+@Manual{R-skimr,
+  title = {skimr: Compact and Flexible Summaries of Data},
+  author = {Elin Waring and Michael Quinn and Amelia McNamara and Eduardo {Arino de la Rubia} and Hao Zhu and Shannon Ellis},
+  year = {2020},
+  note = {R package version 2.1.2},
+  url = {https://CRAN.R-project.org/package=skimr},
 }
 
 @Manual{R-stringr,
