--- a/04-populations.Rmd
+++ b/04-populations.Rmd
@@ -958,8 +958,7 @@ datadozen <- datasaurus_dozen %>% filter(dataset != "dots")
   
 rexgraph <- ggplot(datadozen, aes(x=x, y=y))+
   geom_point()+
-  theme_void()+
-  theme(legend.position = "none")+
+  theme_classic() +
   facet_wrap(~dataset, ncol=3)
 
 
