--- a/packages.bib
+++ b/packages.bib
@@ -15,6 +15,14 @@
   url = {https://CRAN.R-project.org/package=bookdown},
 }
 
+@Manual{R-datasauRus,
+  title = {datasauRus: Datasets from the Datasaurus Dozen},
+  author = {Steph Locke and Lucy {D'Agostino McGowan}},
+  year = {2018},
+  note = {R package version 0.1.4},
+  url = {https://CRAN.R-project.org/package=datasauRus},
+}
+
 @Manual{R-dplyr,
   title = {dplyr: A Grammar of Data Manipulation},
   author = {Hadley Wickham and Romain François and Lionel {
@@ -22,6 +30,13 @@
   year = {2020},
   note = {R package version 1.0.2},
   url = {https://CRAN.R-project.org/package=dplyr},
+}
+
+@Manual{R-emoGG,
+  title = {emoGG: Use Emoji in ggplot2},
+  author = {David L Miller},
+  year = {2020},
+  note = {R package version 0.0.2},
 }
 
 @Manual{R-forcats,
@@ -40,6 +55,14 @@
   url = {https://CRAN.R-project.org/package=ggplot2},
 }
 
+@Manual{R-janitor,
+  title = {janitor: Simple Tools for Examining and Cleaning Dirty Data},
+  author = {Sam Firke},
+  year = {2020},
+  note = {R package version 2.0.1},
+  url = {https://CRAN.R-project.org/package=janitor},
+}
+
 @Manual{R-knitr,
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
@@ -55,12 +78,28 @@
   note = {R package version 0.2},
 }
 
+@Manual{R-MBESS,
+  title = {MBESS: The MBESS R Package},
+  author = {Ken Kelley},
+  year = {2020},
+  note = {R package version 4.8.0},
+  url = {https://CRAN.R-project.org/package=MBESS},
+}
+
 @Manual{R-purrr,
   title = {purrr: Functional Programming Tools},
   author = {Lionel Henry and Hadley Wickham},
   year = {2020},
   note = {R package version 0.3.4},
   url = {https://CRAN.R-project.org/package=purrr},
+}
+
+@Manual{R-RColorBrewer,
+  title = {RColorBrewer: ColorBrewer Palettes},
+  author = {Erich Neuwirth},
+  year = {2014},
+  note = {R package version 1.1-2},
+  url = {https://CRAN.R-project.org/package=RColorBrewer},
 }
 
 @Manual{R-readr,
@@ -77,6 +116,14 @@
   year = {2020},
   note = {R package version 2.3},
   url = {https://CRAN.R-project.org/package=rmarkdown},
+}
+
+@Manual{R-skimr,
+  title = {skimr: Compact and Flexible Summaries of Data},
+  author = {Elin Waring and Michael Quinn and Amelia McNamara and Eduardo {Arino de la Rubia} and Hao Zhu and Shannon Ellis},
+  year = {2020},
+  note = {R package version 2.1.2},
+  url = {https://CRAN.R-project.org/package=skimr},
 }
 
 @Manual{R-stringr,
